RESOLVED FIXED16794
onmouseout fired when moving over tooltip on Windows
https://bugs.webkit.org/show_bug.cgi?id=16794
Summary onmouseout fired when moving over tooltip on Windows
Matt Lilek
Reported 2008-01-08 20:12:50 PST
On Windows, the CSS menus at newegg.com are dismissed when the cursor moves over a tooltip. To reproduce this, you may need to move down the list somewhat briskly to catch a tooltip before it disappears to another item in the menu.
Attachments
Patch (692 bytes, patch)
2010-02-12 13:23 PST, Brian Weinstein
no flags
Patch (1.49 KB, patch)
2010-02-12 13:26 PST, Brian Weinstein
aroben: review+
David Kilzer (:ddkilzer)
Comment 1 2008-02-23 19:41:09 PST
Adam Roben (:aroben)
Comment 2 2008-09-18 08:46:11 PDT
*** Bug 20907 has been marked as a duplicate of this bug. ***
Adam Roben (:aroben)
Comment 3 2009-07-17 08:13:25 PDT
We might need to stop using TTF_SUBCLASS and start relaying events to the tool tip ourselves.
Brian Weinstein
Comment 4 2010-02-12 13:23:34 PST
Brian Weinstein
Comment 5 2010-02-12 13:24:24 PST
Aah, no ChangeLog, webkit-patch thought I had inconsistent newlines.
Brian Weinstein
Comment 6 2010-02-12 13:26:13 PST
Adam Roben (:aroben)
Comment 7 2010-02-12 13:28:02 PST
Comment on attachment 48658 [details] Patch So simple! r=me
Brian Weinstein
Comment 8 2010-02-12 13:33:19 PST
Landed in r54734.
Note You need to log in before you can comment on or make changes to this bug.