onmouseout fired when moving over tooltip on Windows https://bugs.webkit.org/show_bug.cgi?id=16794 <rdar://5762038>.

Reviewed by Adam Roben.

Add WS_EX_TRANSPARENT to out tooltip HWND so it isn't subject to hit testing, and when
you mouse over the tooltip, it doesn't send a mouseout to the web content.

* WebView.cpp:
(WebView::initializeToolTipWindow): Add WS_EX_TRANSPARENT.



Canonical link: https://commits.webkit.org/46044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54734 268f45cc-cd09-0410-ab3c-d52691b4dbfc